# oopprojectlabs

./: .gitignore  README.md  run_system.sh  stop_system.sh
docs/: api.md  diagrams.md  domain.md  openapi.yaml  stage2_api_contracts.md
lab1/: .gitignore  README.md  pyproject.toml
lab1/src/lab1/: __init__.py  errors.py  interfaces.py  models.py  repositories.py  service.py
lab1/tests/: test_library.py
lab2/: .gitignore  README.md  pyproject.toml
lab2/src/rental_service/: __init__.py  api.py  domain.py  main.py  repositories.py  schemas.py  services.py
lab2/tests/: test_api.py
predictor_service/: app.py  domain.py  rules.py  services.py  web.py
tests/: test_auth.py  test_predictor.py
user_service/: app.py  domain.py  repositories.py  services.py  web.py
user_service/static/: app.js  index.html  style.css  swagger.html
