[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lab1-library"
version = "0.1.0"
description = "Library request system for OOP lab 1"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "coverage>=7.6",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/lab1"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "SIM", "UP"]
